objects/ssot__AdverseEvent__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__Category__c</fullName>
        <label>Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CauseEndDateTime__c</fullName>
        <label>Cause End  DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CauseStartDateTime__c</fullName>
        <label>Cause Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterId__c</fullName>
        <label>Clinical Encounter</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetectedDateTime__c</fullName>
        <label>Detected  DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EventCodeId__c</fullName>
        <label>Event Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EventCodeObject__c</fullName>
        <label>Event Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EventEndDateTime__c</fullName>
        <label>Event End  DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EventStartDateTime__c</fullName>
        <label>Event Start  DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__HasSubjectDiscontinuedStudy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Subject Discountinued Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Adverse Event Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsExpected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Expected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__RecordedById__c</fullName>
        <label>Recorded By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordedByObject__c</fullName>
        <label>Recorded By Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordedDateTime__c</fullName>
        <label>Recorded  DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedAdverseEventId__c</fullName>
        <label>Related Adverse Event</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReportingContextId__c</fullName>
        <label>Reporting Context</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReportingContextObject__c</fullName>
        <label>Reporting Context Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Severity__c</fullName>
        <label>Severity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SiteId__c</fullName>
        <label>Site</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SiteObject__c</fullName>
        <label>Site Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectId__c</fullName>
        <label>Subject</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectObject__c</fullName>
        <label>Subject Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726404899_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEvent_SiteId_map_CareProgramS_rel</label>
        <referenceTo>ssot__CareProgramSite__dlm</referenceTo>
        <relationshipLabel>AdverseEvent_SiteId_map_CareProgramS_rel</relationshipLabel>
        <relationshipName>rel_1716726404899_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726409179_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEvent_ReportingContextId_map__rel</label>
        <referenceTo>ssot__ResearchStudy__dlm</referenceTo>
        <relationshipLabel>AdverseEvent_ReportingContextId_map__rel</relationshipLabel>
        <relationshipName>rel_1716726409179_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726410630_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AdverseEvent_SubjectId_map_CareProgr_rel</label>
        <referenceTo>ssot__CareProgramEnrollee__dlm</referenceTo>
        <relationshipLabel>AdverseEvent_SubjectId_map_CareProgr_rel</relationshipLabel>
        <relationshipName>rel_1716726410630_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>